--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -1,5 +1,5 @@
-$main: #bacfbf;
-$second: #f2f2f2;
+$main: aquamarine;
+$second: lightyellow;
 $white: #ffffff;
 $black: #000000;
-$accidental: #ccc;
+$accidental: grey;
