--- a/src/style/_basket.scss
+++ b/src/style/_basket.scss
@@ -9,3 +9,20 @@
     text-align: center;
     flex-direction: column;
 }
+a {
+    text-decoration: none;
+}
+.basket-delete {
+    background: #ec5990;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 100;
+    letter-spacing: 2px;
+}
+.basket-delete:hover {
+    border: 2px solid $white;
+    color: $white;
+}
